[gd_scene load_steps=7 format=3 uid="uid://ca0xj4dr5yqcd"]

[ext_resource type="Script" path="res://Art/Boar/boar.gd" id="1_nlp8t"]
[ext_resource type="Texture2D" uid="uid://cpntv5q5ow3as" path="res://Art/Boar/mrPig.png" id="2_hgpx1"]

[sub_resource type="Animation" id="Animation_cebtf"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_6egce"]
resource_name = "Normal"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ftcw"]
_data = {
"Hurt": SubResource("Animation_cebtf"),
"Normal": SubResource("Animation_6egce")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p6xpr"]
radius = 16.9356
height = 46.7746

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 19
motion_mode = 1
script = ExtResource("1_nlp8t")

[node name="Boar" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.90735e-06, -2.86102e-06)
scale = Vector2(2.14625, 2.14625)
texture = ExtResource("2_hgpx1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ftcw")
}

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 60)
rotation = 1.5708
scale = Vector2(1.23999, 1.23999)
shape = SubResource("CapsuleShape2D_p6xpr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(2.07968, 2.85718)
shape = SubResource("CapsuleShape2D_p6xpr")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ChargeUp" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ChargeUp" to="." method="_on_charge_up_timeout"]
